Fixed minor bug with concatenating tensors

--- a/unet.ipynb
+++ b/unet.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "source": [
-    "<a href=\"https://colab.research.google.com/github/wingated/cs474_labs_f2019/blob/master/DL_Lab4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-   ],
    "metadata": {
     "colab_type": "text",
     "id": "tpnN_XZwq_vc"
-   }
+   },
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/wingated/cs474_labs_f2019/blob/master/DL_Lab4.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "view-in-github"
+   },
    "source": [
     "# Cancer Detection\n",
     "\n",
@@ -115,22 +119,47 @@
     "\n",
     "\n",
     "#### 1.2 Creating the U-Net network"
-   ],
-   "metadata": {
-    "colab_type": "text",
-    "id": "view-in-github"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Below are the imports for all the packages and modules we will use. Run it before you run any other code."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "wQOefmcZVgTl",
+    "pycharm": {
+     "is_executing": false
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Requirement already satisfied: torch in /home/tanner/anaconda3/lib/python3.8/site-packages (1.7.0)\n",
+      "Requirement already satisfied: future in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (0.18.2)\n",
+      "Requirement already satisfied: typing_extensions in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (3.7.4.3)\n",
+      "Requirement already satisfied: dataclasses in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (0.6)\n",
+      "Requirement already satisfied: numpy in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (1.19.2)\n",
+      "Requirement already satisfied: torchvision in /home/tanner/anaconda3/lib/python3.8/site-packages (0.8.1)\n",
+      "Requirement already satisfied: numpy in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (1.19.2)\n",
+      "Requirement already satisfied: torch in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (1.7.0)\n",
+      "Requirement already satisfied: pillow>=4.1.1 in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (8.0.1)\n",
+      "Requirement already satisfied: future in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (0.18.2)\n",
+      "Requirement already satisfied: typing_extensions in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (3.7.4.3)\n",
+      "Requirement already satisfied: dataclasses in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (0.6)\n",
+      "Requirement already satisfied: tqdm in /home/tanner/anaconda3/lib/python3.8/site-packages (4.50.2)\n"
+     ]
+    }
+   ],
    "source": [
     "!pip3 install torch\n",
     "!pip3 install torchvision\n",
@@ -156,39 +185,11 @@
     "__ITB__ = AutoFormattedTB(mode = 'Verbose',color_scheme='LightBg', tb_offset = 1)\n",
     "\n",
     "assert torch.cuda.is_available(), \"You need to request a GPU from Runtime > Change Runtime\""
-   ],
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Requirement already satisfied: torch in /home/tanner/anaconda3/lib/python3.8/site-packages (1.7.0)\n",
-      "Requirement already satisfied: future in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (0.18.2)\n",
-      "Requirement already satisfied: typing_extensions in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (3.7.4.3)\n",
-      "Requirement already satisfied: dataclasses in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (0.6)\n",
-      "Requirement already satisfied: numpy in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (1.19.2)\n",
-      "Requirement already satisfied: torchvision in /home/tanner/anaconda3/lib/python3.8/site-packages (0.8.1)\n",
-      "Requirement already satisfied: numpy in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (1.19.2)\n",
-      "Requirement already satisfied: torch in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (1.7.0)\n",
-      "Requirement already satisfied: pillow>=4.1.1 in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (8.0.1)\n",
-      "Requirement already satisfied: future in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (0.18.2)\n",
-      "Requirement already satisfied: typing_extensions in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (3.7.4.3)\n",
-      "Requirement already satisfied: dataclasses in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (0.6)\n",
-      "Requirement already satisfied: tqdm in /home/tanner/anaconda3/lib/python3.8/site-packages (4.50.2)\n"
-     ]
-    }
-   ],
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "wQOefmcZVgTl",
-    "pycharm": {
-     "is_executing": false
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Alright, so we know that we need the following PyTorch modules to start making this network:\n",
     "* `Conv2d`\n",
@@ -201,12 +202,13 @@
     "The network in the paper starts with a convolution that produces 64 feature channels so we will want a variable to hold that information. We also have a set number of \"levels\" or series of convolutional blocks down and up the \"U\". The network in the paper does this 4 times, but we can make it any number we want. Let's call those variables `num_features_start` and `u_depth`.\n",
     "\n",
     "That should be all the hyper-parameters we need to make this network. Below is the network I've made, extending it as a `nn.Module` so it fits seamlessly into PyTorch's computation graph."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class UNet(nn.Module):\n",
     "    def __init__(self, in_channels, out_channels, num_features_start=64, u_depth=4):\n",
@@ -277,7 +279,7 @@
     "        # back up the U\n",
     "        for i in range(self.depth):\n",
     "            x = self.up_samples[i](x)\n",
-    "            x = torch.cat((activations[-(i+1)](x), x), 1)\n",
+    "            x = torch.cat((activations[-(i+1)], x), 1)\n",
     "            x = self.up_convs[i](x)\n",
     "\n",
     "        return self.final(x)\n",
@@ -296,20 +298,24 @@
     "    elif len(out_shape) == 5:\n",
     "        pad = (0, out_shape[4] - tensor.shape[4], 0, out_shape[3] - tensor.shape[3], 0, out_shape[2] - tensor.shape[2])\n",
     "    return F.pad(tensor, pad)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Next, we wrap our image dataset into a PyTorch dataset object to make it easier to load the data into memory and create batches."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "Il_53HLSWPTY"
+   },
+   "outputs": [],
    "source": [
     "class CancerDataset(Dataset):\n",
     "  def __init__(self, root, download=True, size=512, train=True):\n",
@@ -344,17 +350,13 @@
     "  \n",
     "  def __len__(self):\n",
     "    return len(self.dataset_folder)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "Il_53HLSWPTY"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "class SegmentationTrainer:\n",
     "    def __init__(self):\n",
@@ -433,31 +435,35 @@
     "                self.optimizer.step() # Take step in the direction of the negative gradient\n",
     "\n",
     "        return loss_sum / len(data_loader.dataset), acc_sum / len(data_loader.dataset)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Now we instantiate anything we need for training. Datasets, dataloaders, the network, loss functions, etc."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Instantiate data sets\n",
     "train_dataset = CancerDataset('/tmp', train=True)\n",
     "val_dataset = CancerDataset('/tmp', train=False)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "NAjagHCdGNAh"
+   },
+   "outputs": [],
    "source": [
     "# Instantiate data loaders\n",
     "train_loader = DataLoader(train_dataset,\n",
@@ -471,17 +477,13 @@
     "                        batch_size=4,\n",
     "                        num_workers=4,\n",
     "                        pin_memory=True)"
-   ],
-   "outputs": [],
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "NAjagHCdGNAh"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Instantiate the network\n",
     "device = \"cuda\"\n",
@@ -500,13 +502,13 @@
     "    lr = learning_rate\n",
     ")\n",
     "loss_func = nn.CrossEntropyLoss().to(device)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# Instantiate the trainer\n",
     "trainer = SegmentationTrainer()\n",
@@ -515,49 +517,34 @@
     "trainer.loss_func = loss_func\n",
     "trainer.train_dataloader = train_loader\n",
     "trainer.val_dataloader = val_loader"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "Next we will create a loop that goes over the number of epochs we want to train for, in our case we will do 10 so we aren't waiting hours."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 14,
-   "source": [
-    "train_losses = [] \n",
-    "val_losses = [] \n",
-    "train_acc = [] \n",
-    "val_acc = []\n",
-    "num_epochs = 10\n",
-    "def train_loop(num_epochs):\n",
-    "  try:\n",
-    "    #your code for calling dataset and dataloader\n",
-    "    gc.collect()\n",
-    "    print(torch.cuda.memory_allocated() / 1e9)\n",
-    "    train_losses, val_losses, train_acc, val_acc = trainer.train(num_epochs)\n",
-    "    \n",
-    "  except:\n",
-    "    __ITB__()\n",
-    "    \n",
-    "train_loop(num_epochs)\n"
-   ],
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "RkieTbwlYWPS"
+   },
    "outputs": [
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "  0%|          | 0/336 [00:00<?, ?it/s]"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "0.112381952\n",
       "\n",
@@ -1014,15 +1001,15 @@
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "Exception ignored in: "
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)\n",
@@ -1210,29 +1197,29 @@
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "<function _MultiProcessingDataLoaderIter.__del__ at 0x7f684bfad790>"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)\n",
@@ -1420,23 +1407,23 @@
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "Traceback (most recent call last):\n",
       "Exception ignored in:   File \"/home/tanner/anaconda3/lib/python3.8/site-packages/torch/utils/data/dataloader.py\", line 1203, in __del__\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stdout",
+     "output_type": "stream",
      "text": [
       "\n"
      ]
     },
     {
-     "output_type": "stream",
      "name": "stderr",
+     "output_type": "stream",
      "text": [
       "<function _MultiProcessingDataLoaderIter.__del__ at 0x7f684bfad790>Exception ignored in: \n",
       "Traceback (most recent call last):\n",
@@ -1476,23 +1463,40 @@
      ]
     }
    ],
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "RkieTbwlYWPS"
-   }
+   "source": [
+    "train_losses = [] \n",
+    "val_losses = [] \n",
+    "train_acc = [] \n",
+    "val_acc = []\n",
+    "num_epochs = 10\n",
+    "def train_loop(num_epochs):\n",
+    "  try:\n",
+    "    #your code for calling dataset and dataloader\n",
+    "    gc.collect()\n",
+    "    print(torch.cuda.memory_allocated() / 1e9)\n",
+    "    train_losses, val_losses, train_acc, val_acc = trainer.train(num_epochs)\n",
+    "    \n",
+    "  except:\n",
+    "    __ITB__()\n",
+    "    \n",
+    "train_loop(num_epochs)\n"
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "WARNING: You may run into an error that says \"RuntimeError: CUDA out of memory.\"\n",
     "\n",
     "In this case, the memory required for your batch is larger than what the GPU is capable of. You can solve this problem by adjusting the image size or the batch size and then restarting the runtime. "
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "CZ062Jv1jIIu"
+   },
    "source": [
     "\n",
     "___\n",
@@ -1509,15 +1513,17 @@
     "\n",
     " Make sure your axes are labeled!\n",
     "\n"
-   ],
-   "metadata": {
-    "colab_type": "text",
-    "id": "CZ062Jv1jIIu"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "colab": {},
+    "colab_type": "code",
+    "id": "mTg1jyIsYVZN"
+   },
+   "outputs": [],
    "source": [
     "# Visualization functions\n",
     "def tensor_as_np_img(tensor):\n",
@@ -1554,16 +1560,17 @@
     "    plt.xlim([0, len(train_acc)])\n",
     "    plt.legend()\n",
     "    plt.show()"
-   ],
-   "outputs": [],
-   "metadata": {
-    "colab": {},
-    "colab_type": "code",
-    "id": "mTg1jyIsYVZN"
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "nteract": {
+     "transient": {
+      "deleting": false
+     }
+    }
+   },
    "source": [
     "**NOTE:**\n",
     "\n",
@@ -1573,17 +1580,14 @@
     "\n",
     "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=400&tok=d23e0b&media=cs501r_f2016:training_accuracy.png)\n",
     "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=400&tok=bb8e3c&media=cs501r_f2016:training_loss.png)"
-   ],
-   "metadata": {
-    "nteract": {
-     "transient": {
-      "deleting": false
-     }
-    }
-   }
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "colab_type": "text",
+    "id": "S4s92S2_jQOG"
+   },
    "source": [
     "___\n",
     "\n",
@@ -1600,19 +1604,11 @@
     "then make a hard decision (cancerous/not-cancerous) for each pixel.\n",
     "The resulting image should be black-and-white, where white pixels represent areas\n",
     "the network considers cancerous."
-   ],
-   "metadata": {
-    "colab_type": "text",
-    "id": "S4s92S2_jQOG"
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "source": [
-    "# Code for testing prediction on an image\n"
-   ],
-   "outputs": [],
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -1620,7 +1616,11 @@
     "pycharm": {
      "is_executing": false
     }
-   }
+   },
+   "outputs": [],
+   "source": [
+    "# Code for testing prediction on an image\n"
+   ]
   }
  ],
  "metadata": {
@@ -1630,9 +1630,12 @@
    "name": "lab4.ipynb",
    "provenance": []
   },
+  "interpreter": {
+   "hash": "de0ed7c7f898e567d4d5b9b213d22f40d2a2eccb125a7b6be0e0e1c3ce1f2abf"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.8.5 64-bit ('base': conda)"
+   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1657,9 +1660,6 @@
     },
     "source": []
    }
-  },
-  "interpreter": {
-   "hash": "de0ed7c7f898e567d4d5b9b213d22f40d2a2eccb125a7b6be0e0e1c3ce1f2abf"
   }
  },
  "nbformat": 4,
