Fixed a small tensor size error in network

--- a/unet.ipynb
+++ b/unet.ipynb
@@ -256,7 +256,7 @@
     "                self.activation_func(),\n",
     "            ))\n",
     "            self.up_convs.append(nn.Sequential(\n",
-    "                self.conv(next_size, next_size, kernel_size=3, stride=1, padding=1),\n",
+    "                self.conv(current_size, next_size, kernel_size=3, stride=1, padding=1),\n",
     "                self.activation_func(),\n",
     "                self.conv(next_size, next_size, kernel_size=3, stride=1, padding=1),\n",
     "                self.activation_func(),\n",
@@ -1631,10 +1631,10 @@
    "provenance": []
   },
   "interpreter": {
-   "hash": "de0ed7c7f898e567d4d5b9b213d22f40d2a2eccb125a7b6be0e0e1c3ce1f2abf"
+   "hash": "122ca43e5be78472441972e8592202447383b9fbd624a1070ba6629154edadb0"
   },
   "kernelspec": {
-   "display_name": "Python 3.8.5 64-bit ('base': conda)",
+   "display_name": "Python 3.7.4 64-bit ('base': conda)",
    "name": "python3"
   },
   "language_info": {
@@ -1647,7 +1647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   },
   "nteract": {
    "version": "0.28.0"
