--- a/unet.ipynb
+++ b/unet.ipynb
@@ -125,6 +125,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Install some dependencies if they aren't installed already"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%pip3 install torch\n",
+    "%pip3 install torchvision\n",
+    "%pip3 install tqdm"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Below are the imports for all the packages and modules we will use. Run it before you run any other code."
    ]
   },
@@ -161,10 +179,6 @@
     }
    ],
    "source": [
-    "!pip3 install torch\n",
-    "!pip3 install torchvision\n",
-    "!pip3 install tqdm\n",
-    "\n",
     "import torch\n",
     "import torch.nn as nn\n",
     "import torch.nn.functional as F\n",
@@ -304,7 +318,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, we wrap our image dataset into a PyTorch dataset object to make it easier to load the data into memory and create batches."
+    "___\n",
+    "\n",
+    "## Part 2 - Dataset\n",
+    "\n",
+    "### Preparing the dataset\n",
+    "Next, we wrap our image dataset into a PyTorch `Dataset` object to make it easier to load the data into memory and create batches."
    ]
   },
   {
@@ -350,6 +369,36 @@
     "  \n",
     "  def __len__(self):\n",
     "    return len(self.dataset_folder)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "___\n",
+    "\n",
+    "## Part 3 - Training the model\n",
+    "\n",
+    "### Trainer class\n",
+    "Here we are going to bundle up general training steps into a single class. It doesn't directly rely on PyTorch expect for making sure that the gradient is off for the eval steps. In our case, training involves the following steps:\n",
+    "1. For each epoch*:\n",
+    "    1. Ensure the gradient is turned on (this is how the network learns through backpropagation)\n",
+    "    2. For each batch of images in the **training** dataset:\n",
+    "        1. Load the batch into GPU memory\n",
+    "        2. Reset the gradient\n",
+    "        3. Pass the images through the U-Net\n",
+    "        4. Calculate loss/error\n",
+    "        5. Track the accuracy\n",
+    "        6. Call `backward()` to peform the back propagation\n",
+    "        7. Take a \"step\" in the solution space based on the gradient\n",
+    "    3. Turn off the gradient\n",
+    "    4. For each batch of images in the **validation** dataset:\n",
+    "        1. Load the batch into GPU memory\n",
+    "        2. Pass the images through the U-Net\n",
+    "        3. Calculate loss/error\n",
+    "        4. Track the accuracy\n",
+    "\n",
+    "\\* - **epoch** means one round through both the training and validation datasets"
    ]
   },
   {
@@ -441,6 +490,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Preparation\n",
     "Now we instantiate anything we need for training. Datasets, dataloaders, the network, loss functions, etc."
    ]
   },
@@ -489,8 +539,8 @@
     "device = \"cuda\"\n",
     "\n",
     "net = UNet(\n",
-    "    3,\n",
-    "    2,\n",
+    "    3, #RGB\n",
+    "    2, #Greyscale\n",
     "    num_features_start=64,\n",
     "    u_depth=4\n",
     ").to(device)\n",
@@ -523,6 +573,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Training\n",
     "Next we will create a loop that goes over the number of epochs we want to train for, in our case we will do 10 so we aren't waiting hours."
    ]
   },
@@ -558,9 +609,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "WARNING: You may run into an error that says \"RuntimeError: CUDA out of memory.\"\n",
+    "##### WARNING: You may run into an error that says `RuntimeError: CUDA out of memory`\n",
     "\n",
-    "In this case, the memory required for your batch is larger than what the GPU is capable of. You can solve this problem by adjusting the image size or the batch size and then restarting the runtime. "
+    "In this case, the memory required for your batch is larger than what the GPU is capable of. You can solve this problem by either providing more GPUs/memory or adjusting the image size or the batch size and then restarting the runtime. "
    ]
   },
   {
@@ -573,11 +624,12 @@
     "\n",
     "___\n",
     "\n",
-    "## Part 2 - Display performance\n",
+    "## Part 4 - Display performance\n",
     "\n",
     "A key part of determining the training performance and potential production performance of any model is to calculate and visualize its accuracy.\n",
     "\n",
-    "Plot performance over time\n",
+    "\n",
+    "### Plot performance over time\n",
     "\n",
     "\n"
    ]
@@ -628,9 +680,10 @@
    "source": [
     "**NOTE:**\n",
     "\n",
-    "Guessing that the pixel is not cancerous every single time will give you an accuracy of ~ 85%.\n",
-    "Your trained network should be able to do better than that (but you will not be graded on accuracy).\n",
-    "This is the result I got after 1 hour or training.\n",
+    "Guessing that the pixel is not cancerous every single time will give you an accuracy of ~85%. This is due to the fact that the majority of cases and therefore cells are going to be noncancerous. Cancerous cells are an outlier and we want our network to be able to accurately detect them.\n",
+    "The trained network should be able to do better than 85% accuracy if we want to call it a successful model.\n",
+    "\n",
+    "Below are some example graphs that show plotted accuracy metrics\n",
     "\n",
     "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=400&tok=d23e0b&media=cs501r_f2016:training_accuracy.png)\n",
     "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=400&tok=bb8e3c&media=cs501r_f2016:training_loss.png)"
@@ -657,19 +710,16 @@
    "source": [
     "___\n",
     "\n",
-    "## Part 3 - Generating predictions\n",
+    "## Part 5 - Generating predictions\n",
     "\n",
-    "This is the real test to see how well your model accomplished its task. We need it to work outside of a training environment and in the real world with novel data points.\n",
-    "\n",
-    "Generate at least 5 predictions on the pos_test_000072.png image and display them as images. These predictions should be made at a reasonable interval (e.g. every epoch). \n",
-    "\n",
-    "You can load this image from the file pos_test_000072.png, or you can get it from the dataset object. It is item 172 of the validation dataset.\n",
-    "You can print both the data instance (x) and the ground-truth label (y_hat) to see how well your network predicts on that instance.\n",
-    "\n",
-    "To do this, calculate the output of your trained network on the pos_test_000072.png image,\n",
-    "then make a hard decision (cancerous/not-cancerous) for each pixel.\n",
-    "The resulting image should be black-and-white, where white pixels represent areas\n",
-    "the network considers cancerous."
+    "This is the real test to see how well your model accomplished its task. We need it to work outside of a training environment and in the real world with novel data points, in our case, new images. This is commonly known as inference."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First let's define a function that converts our tensors to images so we can see what they look like"
    ]
   },
   {
@@ -692,7 +742,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Here we will just use image #172 from the validation data set since I know its label is marked with some cancerous tissue. This way we can compare our model's output using the truth image and prediction image."
+    "### Inference\n",
+    "A key aspect of inference is that it needs to be fast AND not update the network further. We want to keep the weights of all our network connections fixed. To ensure things stay put we call the `Module.eval()` method to ensure that the gradient will not be updated by passing images through the network.\n",
+    "\n",
+    "Here we will just use image #172 from the validation data set since we know its label is marked with some cancerous tissue. This way we can compare our model's prediction output using the base and truth images"
    ]
   },
   {
