correct plotting of loss and accuaracy

--- a/unet.ipynb
+++ b/unet.ipynb
@@ -130,9 +130,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: Line magic function `%pip3` not found.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip3 install torch\n",
     "%pip3 install torchvision\n",
@@ -148,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -157,27 +165,7 @@
      "is_executing": false
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Requirement already satisfied: torch in /home/tanner/anaconda3/lib/python3.8/site-packages (1.7.0)\n",
-      "Requirement already satisfied: future in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (0.18.2)\n",
-      "Requirement already satisfied: typing_extensions in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (3.7.4.3)\n",
-      "Requirement already satisfied: dataclasses in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (0.6)\n",
-      "Requirement already satisfied: numpy in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch) (1.19.2)\n",
-      "Requirement already satisfied: torchvision in /home/tanner/anaconda3/lib/python3.8/site-packages (0.8.1)\n",
-      "Requirement already satisfied: numpy in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (1.19.2)\n",
-      "Requirement already satisfied: torch in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (1.7.0)\n",
-      "Requirement already satisfied: pillow>=4.1.1 in /home/tanner/anaconda3/lib/python3.8/site-packages (from torchvision) (8.0.1)\n",
-      "Requirement already satisfied: future in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (0.18.2)\n",
-      "Requirement already satisfied: typing_extensions in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (3.7.4.3)\n",
-      "Requirement already satisfied: dataclasses in /home/tanner/anaconda3/lib/python3.8/site-packages (from torch->torchvision) (0.6)\n",
-      "Requirement already satisfied: tqdm in /home/tanner/anaconda3/lib/python3.8/site-packages (4.50.2)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
@@ -198,7 +186,7 @@
     "from IPython.core.ultratb import AutoFormattedTB\n",
     "__ITB__ = AutoFormattedTB(mode = 'Verbose',color_scheme='LightBg', tb_offset = 1)\n",
     "\n",
-    "assert torch.cuda.is_available(), \"You need to request a GPU from Runtime > Change Runtime\""
+    "# assert torch.cuda.is_available(), \"You need to request a GPU from Runtime > Change Runtime\""
    ]
   },
   {
@@ -220,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -403,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -459,8 +447,8 @@
     "\n",
     "        loss_sum = 0\n",
     "        acc_sum = 0\n",
-    "        for imgs, labels in data_loader:\n",
-    "            imgs, labels = imgs.to(device, non_blocking=True), labels.to(device,non_blocking=True) # non_blocking is a speed up (async)\n",
+    "        for i, (imgs, labels) in enumerate(data_loader):\n",
+    "            imgs, labels = imgs.to(self.device, non_blocking=True), labels.to(self.device,non_blocking=True) # non_blocking is a speed up (async)\n",
     "            \n",
     "            if training:\n",
     "                self.optimizer.zero_grad() # Set gradient to zero\n",
@@ -483,7 +471,7 @@
     "                loss.backward() # Compute gradient, for weight with respect to loss\n",
     "                self.optimizer.step() # Take step in the direction of the negative gradient\n",
     "\n",
-    "        return loss_sum / len(data_loader.dataset), acc_sum / len(data_loader.dataset)"
+    "        return loss_sum/i, acc_sum/i"
    ]
   },
   {
@@ -496,13 +484,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://liftothers.org/cancer_data.tar.gz to D:\\tmp\\cancer_data.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 2750494655/2750494655 [15:32<00:00, 2948261.12it/s]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting D:\\tmp\\cancer_data.tar.gz\n",
+      "Untarring D:\\tmp\\cancer_data.tar\n"
+     ]
+    }
+   ],
    "source": [
     "# Instantiate data sets\n",
-    "train_dataset = CancerDataset('/tmp', train=True)\n",
-    "val_dataset = CancerDataset('/tmp', train=False)"
+    "train_dataset = CancerDataset('D:\\\\tmp', train=True)\n",
+    "val_dataset = CancerDataset('D:\\\\tmp', train=False)"
    ]
   },
   {
@@ -587,22 +598,17 @@
    },
    "outputs": [],
    "source": [
-    "train_losses = [] \n",
-    "val_losses = [] \n",
-    "train_acc = [] \n",
-    "val_acc = []\n",
     "num_epochs = 10\n",
     "def train_loop(num_epochs):\n",
     "  try:\n",
-    "    #your code for calling dataset and dataloader\n",
     "    gc.collect()\n",
     "    print(torch.cuda.memory_allocated() / 1e9)\n",
-    "    train_losses, val_losses, train_acc, val_acc = trainer.train(num_epochs)\n",
+    "    return trainer.train(num_epochs)\n",
     "    \n",
     "  except:\n",
     "    __ITB__()\n",
     "    \n",
-    "train_loop(num_epochs)\n"
+    "train_losses, val_losses, train_acc, val_acc = train_loop(num_epochs)"
    ]
   },
   {
@@ -644,15 +650,15 @@
    },
    "outputs": [],
    "source": [
-    "# Graphiing fucntions\n",
+    "# Graphing fucntions\n",
     "def show_loss_graph(title, train_losses, val_losses):\n",
     "    plt.plot(train_losses, label=\"Train Loss\")\n",
     "    plt.plot(val_losses, label=\"Validation Loss\")\n",
     "    plt.title(title)\n",
     "    plt.ylabel(\"Avg. Loss per epoch\")\n",
     "    plt.xlabel(\"Epochs\")\n",
-    "    plt.ylim([0, max(max(train_losses), max(val_losses))])\n",
-    "    plt.xlim([0, len(train_losses)])\n",
+    "    plt.ylim(0, max(max(train_losses), max(val_losses)))\n",
+    "    plt.xlim(0, len(train_losses))\n",
     "    plt.legend()\n",
     "    plt.show()\n",
     "\n",
@@ -695,7 +701,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "show_loss_graph(\"Loss graph\", train_losses, val_losses)\n",
     "\n",
     "show_accuracy_graph(\"Accuracy graph\", train_acc, val_acc)"
@@ -779,6 +784,25 @@
     "print('Diagnosis - Prediction')\n",
     "show_tensor_as_img(prediction)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----\n",
+    "\n",
+    "## Part 6 - Saving the model\n",
+    "\n",
+    "Alright! We've made a pretty good model. But what go is it if it will disappear the second we end this coding session. We will have to train a new one every time and that's just not an efficient use of resources. So we will learn a few ways we can save our model's state. This will allow us to pick up where we left off if we need to continue training and fine tuning a model or allow us to use the model in a production inference environment.\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -805,7 +829,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.11.5"
   },
   "nteract": {
    "version": "0.28.0"
