--- a/unet.ipynb
+++ b/unet.ipynb
@@ -20,22 +20,22 @@
     "# Cancer Detection\n",
     "\n",
     "## Overview\n",
-    "Convolutional neural networks are used to solve many computer vision problems. One of the more modern problems researchers and machine learning engineers have tried to solve is detecting cancer in cross-sectioned microscopic slides for various tissue types. These slide images are called \"whole slide images\" (WSI) they are *huge* images, usually 1-2 GBs large and are digitized with fancy scanner machines.\n",
+    "Convolutional neural networks are used to solve many computer vision problems. One of the more modern problems researchers and machine learning engineers have tried to solve is detecting cancer in cross-sectioned microscopic slides for various tissue types, known as histopathology. These slide images are called \"whole slide images\" (WSI) they are **huge** images, usually 1-2 GBs and are digitized by fancy scanner machines. The tissue is usually enhanced with a histology stain which adds colors to different structures within the cells <a name=\"cite_ref-1\"></a>[<sup>[1]</sup>](#cite_note-1).\n",
     "\n",
-    "Recently the FDA gave the first ever approval for a machine learning based digital pathology product [read more here](https://www.paige.ai/news/news-press-release1/). So the digital pathology industry is still growing and in need of great minds!\n",
+    "In 2019, the FDA gave the first ever \"Breakthrough Device designation\" for a AI-based diagnosis product to PaigeAI [read more on their site](https://paige.ai/fda-grants-breakthrough-designation-to-paige/). But the digital pathology industry is still growing and in need of great minds!\n",
     "\n",
-    "### What you should already\n",
-    "* Know the Python programming language and various packages like numpy and matplotlib\n",
+    "### What you should already know\n",
+    "* The Python programming language and various packages like numpy and matplotlib\n",
     "* Be familiar with PyTorch\n",
     "* Have a basic understanding of machine and deep learning concepts\n",
     "\n",
-    "### You will learn\n",
+    "### What this notebook will teach you\n",
     "* To build a dense prediction model for image segmentation problems\n",
     "* To understand how to convert research papers into usable networks using PyTorch\n",
     "\n",
     "### Data set\n",
-    "The data is given as a set of 1024×1024 PNG images. These images are \"tiles\" or small squares of the original WSI because working with one gigabit file wouldn't fit on most machines and would be extremely slow for training.\n",
-    "Each input image (in the ```inputs``` directory) is an RGB image of a section of tissue,\n",
+    "The data is given as a set of 1024×1024 PNG images. These images are \"patches\" or small squares of the original WSI because working with one gigabit file wouldn't fit on most machines and would be extremely slow for training.\n",
+    "Each input image (in the ```inputs``` directory) is an RGB image of a section of tissue that has been stained with a PIN4 histology stain, which is a special stain,\n",
     "and there a file with the same name (in the ```outputs``` directory) \n",
     "that has a dense labeling of whether or not a section of tissue is cancerous\n",
     "(white pixels mean “cancerous”, while black pixels mean “not cancerous”).\n",
@@ -50,18 +50,38 @@
     "An example image, and its corresponding ground truth labeling, is shown below.\n",
     "(And is contained in the downloadable dataset below).\n",
     "\n",
-    "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=200&tok=a8ac31&media=cs501r_f2016:pos_test_000072_output.png)\n",
-    "<img src=\"http://liftothers.org/dokuwiki/lib/exe/fetch.php?media=cs501r_f2016:pos_test_000072.png\" width=\"200\">\n",
+    "<img src=\"assets/pos_test_000045.png\" width=\"200\">\n",
+    "<img src=\"assets/pos_test_000045_label.png\" width=\"200\">\n",
     "\n",
     "### Articles & Papers to read beforehand\n",
     "* [U-Net: Convolutional Networks for Biomedical Image Segmentation | Arvix paper](https://arxiv.org/pdf/1505.04597.pdf)\n",
     "* [Up Sampling Images | Toward Data Science](https://towardsdatascience.com/up-sampling-with-transposed-convolution-9ae4f2df52d0)\n",
     "\n",
     "If you don't understand or are new to CNN's then chekcout this article as well\n",
-    "* [Intro to Convolutional Neural Networks | Towards Data Science](https://towardsdatascience.com/an-introduction-to-convolutional-neural-networks-eb0b60b58fd7)\n",
-    "\n",
+    "* [Intro to Convolutional Neural Networks | Towards Data Science](https://towardsdatascience.com/an-introduction-to-convolutional-neural-networks-eb0b60b58fd7)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "___\n",
+    "## Part 0 - Define the problem\n",
     "\n",
+    "#### \"Business\" problem\n",
+    "Pathologists have a lot on their plate and it takes a lot of time to examine an entire biopsy to decide if a patient does or does not have cancer, if they do they must then assign it a histopathological score<a name=\"cite_ref-2\"></a>[<sup>[2]</sup>](#cite_note-2), and write reports about their findings. (And before the pathologist even sees the biopsy there's the entire clinic procedure and lab prcoesses i.e. grossing and staining, so its a long process in general)\n",
+    "\n",
+    "What if we could help speed up the process of determining cancerous cells by highlighting areas of interest in the pathologist's annotation viewer? That's the problem we would like to help solve.\n",
+    "\n",
+    "#### Technical problem\n",
+    "As you've probably guessed from the description of the dataset, this problem at its core, is a binary-classification problem. Image segmentation itself is a classification problem because it applies a class to every pixel in the image. We are trying to decide if a particular pixel of the image contains a representation of what we think a cancerous cell looks like based on our labelled data. If it does then we give it a positive classification (1 or white pixel) otherwise a negative classification (0 or black pixel)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
     "## Part 1 - Implement a dense image segmentation network\n",
     "\n",
     "#### Food for thought\n",
@@ -74,7 +94,7 @@
     "\n",
     "Below is an image from the U-Net paper, it is an illustration of what a U-Net \"looks\" like. You can probably guess why they named it \"U\" net.\n",
     "\n",
-    "![(Figure 1)](https://lh3.googleusercontent.com/qnHiB3B2KRxC3NjiSDtY08_DgDGTDsHcO6PP53oNRuct-p2QXCR-gyLkDveO850F2tTAhIOPC5Ha06NP9xq1JPsVAHlQ5UXA5V-9zkUrJHGhP_MNHFoRGnjBz1vn1p8P2rMWhlAb6HQ=w2400)\n",
+    "![(Figure 1)](assets/unet-arch.png)\n",
     "\n",
     "Let's take a look at all the parts of this network illustration.\n",
     "\n",
@@ -687,12 +707,7 @@
     "**NOTE:**\n",
     "\n",
     "Guessing that the pixel is not cancerous every single time will give you an accuracy of ~85%. This is due to the fact that the majority of cases and therefore cells are going to be noncancerous. Cancerous cells are an outlier and we want our network to be able to accurately detect them.\n",
-    "The trained network should be able to do better than 85% accuracy if we want to call it a successful model.\n",
-    "\n",
-    "Below are some example graphs that show plotted accuracy metrics\n",
-    "\n",
-    "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=400&tok=d23e0b&media=cs501r_f2016:training_accuracy.png)\n",
-    "![](http://liftothers.org/dokuwiki/lib/exe/fetch.php?w=400&tok=bb8e3c&media=cs501r_f2016:training_loss.png)"
+    "The trained network should be able to do better than 85% accuracy if we want to call it a successful model."
    ]
   },
   {
@@ -803,6 +818,19 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "\n",
+    "### Footnotes\n",
+    "\n",
+    "<a name=\"cite_note-1\"></a> 1. [^](#cite_ref-1)Hematoxylin and Eosin (H&E) is probably the most commonly used histology stain. More here: https://www.leicabiosystems.com/us/knowledge-pathway/he-staining-overview-a-guide-to-best-practices/\n",
+    "\n",
+    "<a name=\"cite_note-2\"></a> 2. [^](#cite_ref-2)Gleason score in the case of prostate samples like our dataset, but usage of pathology scoring in AI models is beyond the scope of this notebook"
+   ]
   }
  ],
  "metadata": {
