--- a/unet.ipynb
+++ b/unet.ipynb
@@ -825,11 +825,12 @@
    "source": [
     "---\n",
     "\n",
-    "### Footnotes\n",
+    "## Footnotes\n",
+    "The links to get here only seem to work in Colab.\n",
     "\n",
-    "<a name=\"cite_note-1\"></a> 1. [^](#cite_ref-1)Hematoxylin and Eosin (H&E) is probably the most commonly used histology stain. More here: https://www.leicabiosystems.com/us/knowledge-pathway/he-staining-overview-a-guide-to-best-practices/\n",
+    "<a name=\"cite_note-1\"></a> 1. [](#cite_ref-1)Hematoxylin and Eosin (H&E) is probably the most commonly used histology stain. More here: https://www.leicabiosystems.com/us/knowledge-pathway/he-staining-overview-a-guide-to-best-practices/\n",
     "\n",
-    "<a name=\"cite_note-2\"></a> 2. [^](#cite_ref-2)Gleason score in the case of prostate samples like our dataset, but usage of pathology scoring in AI models is beyond the scope of this notebook"
+    "<a name=\"cite_note-2\"></a> 2. [](#cite_ref-2)Gleason score in the case of prostate samples like our dataset, but usage of pathology scoring in AI models is beyond the scope of this notebook"
    ]
   }
  ],
