some variable name changes

--- a/unet.ipynb
+++ b/unet.ipynb
@@ -467,7 +467,7 @@
     "\n",
     "        loss_sum = 0\n",
     "        acc_sum = 0\n",
-    "        for i, (imgs, labels) in enumerate(data_loader):\n",
+    "        for batch, (imgs, labels) in enumerate(data_loader):\n",
     "            imgs, labels = imgs.to(self.device, non_blocking=True), labels.to(self.device,non_blocking=True) # non_blocking is a speed up (async)\n",
     "            \n",
     "            if training:\n",
@@ -475,7 +475,7 @@
     "\n",
     "            y_hat = self.network(imgs)\n",
     "            loss = self.loss_func(y_hat, labels.long())\n",
-    "            loss_sum += loss.detach().sum().item()\n",
+    "            loss_sum += loss.detach().item()\n",
     "\n",
     "            \n",
     "            probs = y_hat.argmax(1)\n",
@@ -484,14 +484,21 @@
     "\n",
     "            mem_allocated = torch.cuda.memory_allocated(0) / 1e9\n",
     "\n",
-    "            self.loop.set_description('loss: {:.4f}, accuracy: {:.4f}, mem: {:.2f}'.format(loss.detach().sum().item(), accuracy, mem_allocated))\n",
+    "            self.loop.set_description('{} batch # {} -- loss: {:.4f}, accuracy: {:.4f}, mem: {:.2f}'.format(\n",
+    "                    'Train' if training else 'Eval',\n",
+    "                    batch,\n",
+    "                    loss.item(),\n",
+    "                    accuracy.item(),\n",
+    "                    mem_allocated\n",
+    "                )\n",
+    "            )\n",
     "            self.loop.update(1)\n",
     "\n",
     "            if training:\n",
     "                loss.backward() # Compute gradient, for weight with respect to loss\n",
     "                self.optimizer.step() # Take step in the direction of the negative gradient\n",
     "\n",
-    "        return loss_sum/i, acc_sum/i"
+    "        return loss_sum/batch, acc_sum/batch"
    ]
   },
   {
